# LangGraph-Workflows

./: .env.example  README.md  pyproject.toml  requirements.txt
CHATBOT/: basic_chatbot.ipynb
conditional_workflow/: 1.cond.ipynb  1.conditional_workflow_quadratic_eqn.ipynb  2.review_handling_wrokflow.ipynb
iterative_workflow/: 1.multiple_evaluation_llm_response.ipynb
parallel_workflow/: essay_parallel.ipynb
sequence_workflow/: 1.bmi_calculator.ipynb  2.llm_QandA.ipynb  3.llm_prompt_chaining.ipynb  4.essay.ipynb
